src/app/components/MostLikedCasts.module.css
.text_image {
    margin-top: 16px;
    width: 100%;
    border-radius: 8px;
} 

.casts {
    background-color: #a990e1;
    padding: 4px 4px;
    border-radius: 8px;
}

.cast {
    background-color: #423a6d;
    border-radius: 4px;
    padding: 16px;
    margin: 0 auto;
    margin-bottom: 4px;
}

.castsloading {
    background-color: #28292f;
    padding: 8px 8px;
    border-radius: 8px;
}

.castloading {
    background-color: #232228;
    height: 100px;
    border-radius: 4px;
    padding: 16px;
    margin: 0 auto;
    margin-bottom: 8px;
}

.cast:last-child {
    margin-bottom: 0px !important;
}

.cast .text {
    color: #F9F5FD;
    margin: 0 auto;
    margin-bottom: 16px;
}

.cast .likes {
    color: #F9F5FD;
}

.cast .link-to-warpcast {
    float: right;
    color: #b6acd9;
    text-decoration: none;
    transition: 0.125s ease;
}

.cast .link-to-warpcast:hover {
    text-decoration: underline;
    cursor: pointer;
}

.cast > a {
    color: #807d95;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 100%; /* 12px */
    letter-spacing: 0.48px;
}

.cast h3 a:hover {
    opacity: 0.65 !important;
    padding-bottom: 6px;
}

@media only screen and (max-width: 600px) {
    .casts {
        background-color: #00000000 !important;
        padding: 0px;
        border-radius: 0px;
    }
    
    .cast {
        border-radius: 8px;
        background-color: #403a60;
        padding: 16px;
        margin: 0 auto;
        margin-bottom: 16px;
    }

    .cast > a {
        font-size: 17px;
        letter-spacing: 0.3px;
    }

    .cast > .link-to-warpcast {
        font-size: 15px;
        color: #b6acd9;
        padding: 0px 0px 8px 8px;
    }

    .cast .text {
        font-size: 16px;
        letter-spacing: 0.1px;
        margin-bottom: 16px;
    }

    .cast svg {
        height: 14px  !important;
        width: 14px !important;
    }
}

